GNOME Bugzilla – Bug 766233
Crash when server does not support XI2
Last modified: 2016-05-11 01:30:25 UTC
Commit d236fd7 added a call to XIGetClientPointer to gdkdisplay-x11.c, which crashes on X servers that do not support XI2, such as X2Go (NX).
Can you be more specific about "crashes" - it is certainly not supposed to crash, that would be an Xlib bug.
We should probably catch the X errors that may occur here. Is that what you are seeing ?
(meld:2673): Gdk-ERROR **: The program 'meld' received an X Window System error. This probably reflects a bug in the program. The error was 'BadRequest (invalid request code or no such operation)'. (Details: serial 513 error_code 1 request_code 131 (XInputExtension) minor_code 45) A stack trace with GDK_SYNCHRONIZE=1: Stack trace of thread 28925: #0 0x00007f0f12a437eb g_logv (libglib-2.0.so.0) #1 0x00007f0f12a4395f g_log (libglib-2.0.so.0) #2 0x00007f0f12fabad8 _gdk_x11_display_error_event (libgdk-3.so.0) #3 0x00007f0f12fb7ca9 gdk_x_error (libgdk-3.so.0) #4 0x00007f0f11a7587d _XError (libX11.so.6) #5 0x00007f0f11a727c7 n/a (libX11.so.6) #6 0x00007f0f11a73935 _XReply (libX11.so.6) #7 0x00007f0f10e56214 XIGetClientPointer (libXi.so.6) #8 0x00007f0f12faa627 gdk_x11_display_get_default_seat (libgdk-3.so.0) #9 0x00007f0f135526a8 gtk_tooltip_trigger_tooltip_query (libgtk-3.so.0) #10 0x00007f0f12a5ae4d g_slist_foreach (libglib-2.0.so.0) #11 0x00007f0f1358f0b9 tooltip_query_idle (libgtk-3.so.0) #12 0x00007f0f12f7b988 gdk_threads_dispatch (libgdk-3.so.0) #13 0x00007f0f12a3cdba g_main_context_dispatch (libglib-2.0.so.0) #14 0x00007f0f12a3d160 g_main_context_iterate.isra.29 (libglib-2.0.so.0) #15 0x00007f0f12a3d482 g_main_loop_run (libglib-2.0.so.0) #16 0x000000000040513b main (pasystray) #17 0x00007f0f11493710 __libc_start_main (libc.so.6) #18 0x0000000000405189 n/a (pasystray)